# code_api_agent

./: .gitignore  DEPLOY_395.md  DEVLOG.md  README.md  app.py  cli.py  demo.py  lenses_click.json  pyproject.toml  requirements.txt
common/: __init__.py  config.py  gpu.py  models.py
docgen/: __init__.py  apidoc.py  apidoc_render.py  cli.py  lens.py  render.py  summarize.py
docs/: mkdocs.yml
eval/: run_eval.py
indexing/: __init__.py  builder.py  callgraph.py  chunk.py  cli.py  embed.py  retrieve.py  symbol_index.py  vector_store.py
inference/: __init__.py  client.py  server.py
ingestion/: __init__.py  cli.py  clone.py  filetree.py  parse.py
lens_compare/: examples.FIXED.md  examples.LENS.md  examples_aliases.FIXED.md  examples_aliases.LENS.md  examples_imagepipe.FIXED.md  examples_imagepipe.LENS.md  include_ceres.FIXED.md  include_ceres.LENS.md  internal_ceres.FIXED.md  internal_ceres.LENS.md  scrapy_core.FIXED.md  scrapy_core.LENS.md  scrapy_downloadermiddlewares.FIXED.md  scrapy_downloadermiddlewares.LENS.md  scrapy_http.FIXED.md  scrapy_http.LENS.md  src_click.FIXED.md  src_click.LENS.md
qa/: __init__.py  agent.py  cli.py  tools.py
report/: report_ieee.tex
scripts/: README.md  _cluster_install.sh  _start_demo_cluster.sh  _start_uis_cluster.sh  _uv.toml  build_llama.sh  compare_lens_doc.py  download_model.py  fetch_llama_prebuilt.sh  probe_lens.py  run_demo.sh  run_lens_compare.sh  serve_llama_cuda.sh  serve_llama_prebuilt_vulkan.sh  serve_llama_vulkan.sh  show_lens_input.py  verify_cache_prompt.py  verify_skill_switch.py
skills/: __init__.py  cli.py  (+3 more)
(+63 files in other folders)
