[project]
name = "code-api-agent"
version = "0.1.0"
requires-python = ">=3.10" 

dependencies = [
    "huggingface_hub",
    "GitPython>=3.1.40",
    "tree-sitter>=0.23.0",
    "tree-sitter-language-pack>=0.7.0",
    "openai>=1.30.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "fastembed>=0.8.0",
    "chromadb>=1.5.0",
    "mkdocs-material>=9.5.0",
    "chainlit>=2.0.0",
    "gradio>=6.17.3",
]

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
default = true
